--- a/livecode.css
+++ b/livecode.css
@@ -70,7 +70,7 @@ textarea{
 iframe{
     width: 100%;
     height: 95%;
-    background: #1f1f1f;
+    background: #838282;
     border: 0;
     outline: 0;
 }
@@ -85,4 +85,8 @@ label{
     align-items: center;
     background: #000;
     height: 30px;
+}
+
+.ri{
+    color: #fff;
 }
