--- a/exemplos.css
+++ b/exemplos.css
@@ -47,7 +47,6 @@ body {
     width: 100%;
     height: 100vh;
     padding: 20px;    
-    display: flex;
 }
 
 .projeto1{
@@ -93,12 +92,16 @@ label{
     
 }
 
-button{
-    width: 10%;
-    height: 30px;
+.button{
+    width: 15%;
+    height: 60%;
     background: #50d87d;
     color: #ffffff;
-    border: 2px solid;
-    border-radius: 8px;
-    border-color: #50d87d;
+    border: 0px solid;
+    border-radius: 4px;
+    text-align: center;
+    display: block;
 }
+    
+
+
